Add : 팀 지원 및 합류 요청 API 설계

--- a/api/프로젝트 관련.md
+++ b/api/프로젝트 관련.md
@@ -2,9 +2,9 @@
 
 ## 프로젝트 트랙 선택
 
-| TYPE |           URL           | TOKEN |
-| :--: | :---------------------: | :---: |
-| POST | /api/user/project/track |   O   |
+| TYPE |             URL              | TOKEN |
+| :--: | :--------------------------: | :---: |
+| POST | /api/auth/user/project/track |   O   |
 
 ### Request
 
@@ -60,12 +60,130 @@
 }
 ```
 
-- 인증 실패 (서버 오류)
+- 서버 오류
 
 ```json
 {
   "status": 500,
   "success": false,
-  "message": "Internal Server Error, 교육생 인증 실패"
+  "message": "Internal Server Error, 프로젝트 트랙 선택 실패"
+}
+```
+
+<br />
+
+## 팀 지원 요청 (사용자 -> 팀)
+
+| TYPE |          URL           | TOKEN |
+| :--: | :--------------------: | :---: |
+| POST | /api/auth/user/request |   O   |
+
+### Request
+
+```json
+{
+  "teamId": 1,
+  "message": "지원 메시지 글"
+}
+```
+
+### Response
+
+- 유효하지 않는 토큰
+
+```json
+{
+  "status": 401,
+  "success": false,
+  "message": "토큰이 유효하지 않습니다."
+}
+```
+
+- 모집 마감
+
+```json
+{
+  "status": 409,
+  "success": false,
+  "message": "해당 팀은 팀원 모집이 마감되었습니다."
+}
+```
+
+- 이미 팀에 속해있는 교육생 또는 팀장이 팀을 지원 시
+
+```json
+{
+  "status": 409,
+  "success": false,
+  "message": "사용자는 이미 팀에 속해있어 요청이 불가능합니다."
+}
+```
+
+- 서버 오류
+
+```json
+{
+  "status": 500,
+  "success": false,
+  "message": "Internal Server Error, 팀 지원 요청"
+}
+```
+
+<br />
+
+## 팀 합류 요청 (팀 (팀장) -> 사용자)
+
+| TYPE |          URL           | TOKEN |
+| :--: | :--------------------: | :---: |
+| POST | /api/auth/team/request |   O   |
+
+### Request
+
+```json
+{
+  "teamId": 1,
+  "message": "지원 메시지 글"
+}
+```
+
+### Response
+
+- 유효하지 않는 토큰
+
+```json
+{
+  "status": 401,
+  "success": false,
+  "message": "토큰이 유효하지 않습니다."
+}
+```
+
+- 해당 교육생 이미 다른 팀에 속해 있을 시
+
+```json
+{
+  "status": 409,
+  "success": false,
+  "message": "해당 교육생은 이미 다른 팀에 합류되어 있습니다."
+}
+```
+
+- 팀장 지휘가 없을 때
+
+```json
+{
+  "status": 409,
+  "success": false,
+  "message": "사용자는 팀 합류 요청 권한이 없습니다. 팀 생성 후 다시 시도해 주세요."
+}
+```
+
+- 서버 오류
+
+```json
+{
+  "status": 500,
+  "success": false,
+  "message": "Internal Server Error, 팀 합류 요청 실패"
 }
 ```
