--- a/api/로그인 페이지.md
+++ b/api/로그인 페이지.md
@@ -34,15 +34,19 @@
     "projectId": 1,
     "projectName": "공통 프로젝트",
     "projectTrack": "웹 기술",
+    "projectTeamId": 10
   },
   {
     "projectId": 2,
     "projectName": "특화 프로젝트",
     "projectTrack": null,
+    "projectTeamId": 11
   },
   {
     "projectId": 3,
     "projectName": "자율 프로젝트",
+    "projectTrack": null,
+    "projectTeamId": null,
   },
 ]
 }
