Add : 프로젝트 정보 받기 API 설계

--- a/api/교육생 관련.md
+++ b/api/교육생 관련.md
@@ -63,7 +63,7 @@
       {
         "techStack": {
           "id": 2,
-          "techStackName": "CSS3", 
+          "techStackName": "CSS3",
           "techStackImgUrl": "/images/assets/tech-stack/CSS3.png"
         },
         "techStackLevel": "중"
@@ -113,8 +113,6 @@
 }
 ```
 
-
-
 ## UPDATE | 교육생 상세 정보 수정 요청
 
 | TYPE |          URL           | TOKEN |
@@ -148,13 +146,11 @@
 }
 ```
 
->formData 형식으로 전송
+> formData 형식으로 전송
 >
->최소 요건 : techStacks 2가지 이상
+> 최소 요건 : techStacks 2가지 이상
 >
->특이 사항 : techStacks → Json Stringify로 처리
-
-
+> 특이 사항 : techStacks → Json Stringify로 처리
 
 ### Response
 
@@ -186,12 +182,11 @@
 }
 ```
 
-
 ## READ | 교육생 리스트 요청
 
-| TYPE |      URL       | TOKEN |
-| :--: | :------------: | :---: |
-| get | /api/auth/project/user-list |   O   |
+| TYPE |             URL             | TOKEN |
+| :--: | :-------------------------: | :---: |
+| get  | /api/auth/project/user-list |   O   |
 
 ### Request
 
@@ -211,7 +206,6 @@
 ```
 
 > Query String Params 형식으로 요청
-
 
 ### Response
 
@@ -261,14 +255,13 @@
       "job2": "백엔드 (Back-end)",
       "githubUrl": "https://github.com/ssafy-mate",
       "belongToTeam": false
-    },
+    }
   ],
   "totalPage": 1,
   "nowPage": 1,
   "totalElement": 2
 }
 ```
-
 
 - 서버 처리 실패
 
@@ -280,3 +273,52 @@
 }
 ```
 
+<br />
+
+## READ | 교육생 프로젝트 정보 받기
+
+| TYPE |           URL           | TOKEN |
+| :--: | :---------------------: | :---: |
+| GET  | /api/auth/user/projects |   O   |
+
+### Request
+
+```json
+{}
+```
+
+### Response
+
+- 프로젝트 정보 받기 성공
+
+```json
+"projects": [
+  {
+    "projectId": 1,
+    "projectName": "공통 프로젝트",
+    "projectTrack": "웹 기술",
+    "projectTeamId": 10
+  },
+  {
+    "projectId": 2,
+    "projectName": "특화 프로젝트",
+    "projectTrack": null,
+    "projectTeamId": null,
+  },
+  {
+    "projectId": 3,
+    "projectName": "자율 프로젝트",
+    "projectTrack": null,
+    "projectTeamId": null,
+  },
+```
+
+- 서버 오류
+
+```json
+{
+  "status": 500,
+  "success": false,
+  "message": "Internal Server Error, 프로젝트 정보 갱신 실패"
+}
+```
