--- a/api/로그인 페이지.md
+++ b/api/로그인 페이지.md
@@ -30,25 +30,25 @@
   "token": "ad123sdafgfa0asdfas12390",
   "message": "로그인하였습니다.",
   "projects": [
-  {
-    "projectId": 1,
-    "projectName": "공통 프로젝트",
-    "projectTrack": "웹 기술",
-    "projectTeamId": 10
-  },
-  {
-    "projectId": 2,
-    "projectName": "특화 프로젝트",
-    "projectTrack": null,
-    "projectTeamId": 11
-  },
-  {
-    "projectId": 3,
-    "projectName": "자율 프로젝트",
-    "projectTrack": null,
-    "projectTeamId": null,
-  },
-]
+    {
+      "projectId": 1,
+      "projectName": "공통 프로젝트",
+      "projectTrack": "웹 기술",
+      "projectTeamId": 10
+    },
+    {
+      "projectId": 2,
+      "projectName": "특화 프로젝트",
+      "projectTrack": null,
+      "projectTeamId": null
+    },
+    {
+      "projectId": 3,
+      "projectName": "자율 프로젝트",
+      "projectTrack": null,
+      "projectTeamId": null
+    }
+  ]
 }
 ```
 
@@ -62,7 +62,7 @@
 }
 ```
 
-- 로그인 실패 (서버 오휴)
+- 로그인 실패 (서버 오류)
 
 ```json
 {
@@ -76,9 +76,9 @@
 
 ## 아이디 찾기
 
-| TYPE |        URL        | TOKEN |
-| :--: | :---------------: | :---: |
-| GET | /api/user/id-search |   X   |
+| TYPE |         URL         | TOKEN |
+| :--: | :-----------------: | :---: |
+| GET  | /api/user/id-search |   X   |
 
 ### Request
 
@@ -99,7 +99,7 @@
 {
   "success": true,
   "userEmail": "sugarfina637@naver.com",
-  "message": "고객님의 싸피메이트 계정을 찾았습니다.\n 아이디 확인 후 로그인 해주세요.",
+  "message": "고객님의 싸피메이트 계정을 찾았습니다.\n 아이디 확인 후 로그인 해주세요."
 }
 ```
 
@@ -127,15 +127,15 @@
 
 ## 비밀번호 재설정 (인증 요청 & 재요청)
 
-| TYPE |        URL        | TOKEN |
-| :--: | :---------------: | :---: |
-| GET | /api/user/pw-search |   X   |
+| TYPE |         URL         | TOKEN |
+| :--: | :-----------------: | :---: |
+| GET  | /api/user/pw-search |   X   |
 
 ### Request
 
 ```json
 {
-  "userEmail" : "ssafy@test.com"
+  "userEmail": "ssafy@test.com"
 }
 ```
 
@@ -176,8 +176,8 @@
 
 ## 비밀번호 재설정 (인증 코드 확인)
 
-| TYPE |        URL        | TOKEN |
-| :--: | :---------------: | :---: |
+| TYPE |         URL         | TOKEN |
+| :--: | :-----------------: | :---: |
 | POST | /api/user/pw-search |   X   |
 
 ### Request
@@ -185,7 +185,7 @@
 ```json
 {
   "code": "02ds5462",
-  "userEmail" : "ssafy@test.com",
+  "userEmail": "ssafy@test.com"
 }
 ```
 
@@ -233,15 +233,15 @@
 
 ## 비밀번호 재설정 (새로운 비밀번호 설정)
 
-| TYPE |        URL        | TOKEN |
-| :--: | :---------------: | :---: |
-| PUT | /api/user/pw-search |   X   |
+| TYPE |         URL         | TOKEN |
+| :--: | :-----------------: | :---: |
+| PUT  | /api/user/pw-search |   X   |
 
 ### Request
 
 ```json
 {
-  "userEmail" : "ssafy@test.com",
+  "userEmail": "ssafy@test.com",
   "password": "dsfksldf"
 }
 ```
