Modify : 교육생 상세 정보 받기 API 수정

--- a/api/교육생 관련.md
+++ b/api/교육생 관련.md
@@ -2,9 +2,9 @@
 
 ## READ | 교육생 상세 정보 받기
 
-| TYPE |          URL           | TOKEN |
-| :--: | :--------------------: | :---: |
-| GET  | /api/auth/user/:userId |   O   |
+| TYPE |             URL             | TOKEN |
+| :--: | :-------------------------: | :---: |
+| GET  | /api/auth/user/info/:userId |   O   |
 
 ### Request
 
