Modify : 팀 상세 정보 받기 API 수정

--- a/api/팀 관련.md
+++ b/api/팀 관련.md
@@ -107,9 +107,9 @@
 
 ## READ | 팀 상세 정보 페이지
 
-| TYPE |          URL           | TOKEN |
-| :--: | :--------------------: | :---: |
-| GET  | /api/auth/team/:teamId |   O   |
+| TYPE |             URL             | TOKEN |
+| :--: | :-------------------------: | :---: |
+| GET  | /api/auth/team/info/:teamId |   O   |
 
 ### Request
 
@@ -331,13 +331,14 @@
   "meesage": "Internal Server, 팀 삭제 실패"
 }
 ```
+
 <br />
 
 ## READ | 팀 리스트 요청
 
-| TYPE |      URL       | TOKEN |
-| :--: | :------------: | :---: |
-| get | /api/auth/project/team-list |   O   |
+| TYPE |             URL             | TOKEN |
+| :--: | :-------------------------: | :---: |
+| get  | /api/auth/project/team-list |   O   |
 
 ### Request
 
@@ -361,7 +362,6 @@
 
 > sort : 'recent' 일 때 등록 최신순 정렬, 'headcount' total 인원 적은 순 정렬
 
-
 ### Response
 
 ```json
@@ -372,18 +372,18 @@
       "teamImgUrl": "C:\\image\\team_image\\default_img.jpg",
       "campus": "서울",
       "project": "특화 프로젝트",
-      "projectTrack": "인공지능", 
+      "projectTrack": "인공지능",
       "teamName": "팀 싸피",
       "notice": "개발개발",
       "techStacks": [
         {
           "id": 1,
-          "techStackName": "HTML5",
+          "techStackName": "HTML5"
         },
         {
           "id": 2,
-          "techStackName": "CSS3",
-        },
+          "techStackName": "CSS3"
+        }
       ],
       "totalRecruitment": 6,
       "frontendRecruitment": 3,
@@ -397,12 +397,11 @@
   ],
   "totalPage": 1,
   "nowPage": 1,
-  "totalElement": 20,
+  "totalElement": 20
 }
 ```
 
 > isRecruiting : true 일 때 모집 중 false 일 때 모집 마감
-
 
 - 서버 처리 실패
 
