Docs : 대화 내용 불러오기 수정

--- a/api/채팅.md
+++ b/api/채팅.md
@@ -4,7 +4,7 @@
 
 | TYPE |           URL           | TOKEN |
 | :--: | :---------------------: | :---: |
-| GET  | /api/chat/room/{userId} |   X   |
+| GET  | /api/chat/room/{userId} |   O   |
 
 ### Request
 
@@ -18,17 +18,17 @@
 {
   "roomList": [
     {
-      "roomId": "123-124",
-      "userId": 123,
+      "roomId": "1-2",
+      "userId": 1,
       "userName": "조원빈",
       "profileImgUrl": "/src/main/~~~",
       "content": "안녕하세요",
       "sentTime": "2022-01-17T17:03:36.336763"
     },
     {
-      "roomId": "122-124",
-      "userId": 122,
-      "userName": "소정은",
+      "roomId": "1-2",
+      "userId": 2,
+      "userName": "",
       "profileImgUrl": "/src/main/~~~",
       "content": "안녕하세요",
       "sentTime": "2022-01-17T17:03:26.336763"
@@ -78,14 +78,12 @@
 
 | TYPE |      URL      | TOKEN |
 | :--: | :-----------: | :---: |
-| GET  | /api/chat/log |   X   |
+| GET  | /api/chat/log/{roomId} |   O   |
 
 ### Request
 
 ```json
 {
-  "userId1": 123,
-  "userId2": 124,
   "nowPage": 1,
   "entryTime": "2022-01-17T17:03:49.336763"
 }
