Modify : 팀 지원 및 합류 요청 API 수정

--- a/api/프로젝트 관련.md
+++ b/api/프로젝트 관련.md
@@ -89,11 +89,21 @@
 
 ### Response
 
+- 지원 성공 시
+
+```json
+{
+  "status": 200,
+  "success": true,
+  "message": "해당 팀의 팀장 승인 후 팀 합류가 최종적으로 완료됩니다."
+}
+```
+
 - 유효하지 않는 토큰
 
 ```json
 {
-  "status": 401,
+  "status": 403,
   "success": false,
   "message": "토큰이 유효하지 않습니다."
 }
@@ -125,7 +135,7 @@
 {
   "status": 500,
   "success": false,
-  "message": "Internal Server Error, 팀 지원 요청"
+  "message": "Internal Server Error, 팀 지원 요청 실패"
 }
 ```
 
@@ -149,11 +159,21 @@
 
 ### Response
 
+- 합류 요청 성공 시
+
+```json
+{
+  "status": 200,
+  "success": true,
+  "message": "해당 교육생의 승인 후 팀 합류가 최종적으로 완료됩니다."
+}
+```
+
 - 유효하지 않는 토큰
 
 ```json
 {
-  "status": 401,
+  "status": 403,
   "success": false,
   "message": "토큰이 유효하지 않습니다."
 }
