Modify : 채팅 목록 불러오기 API 수정

--- a/api/채팅.md
+++ b/api/채팅.md
@@ -4,15 +4,11 @@
 
 | TYPE |           URL           | TOKEN |
 | :--: | :---------------------: | :---: |
-| GET  | /api/chat/room |   O   |
+| GET  | /api/chat/room/{userId} |   O   |
 
 ### Request
 
-```json
-{
-  "userId" : 1
-}
-```
+- url 
 
 ### Response
 
@@ -65,7 +61,7 @@
 
 | TYPE |      URL      | TOKEN |
 | :--: | :-----------: | :---: |
-| POST  | /api/chat |   X   |
+| POST | /api/chat |   X   |
 
 - 프론트엔드 : 채팅용 서버 주소에 대한 axios instance 생성
 - 백엔드 : 기존 서버와 분리된 채팅용 포트 생성 
