--- a/api/프로젝트 관련.md
+++ b/api/프로젝트 관련.md
@@ -128,6 +128,16 @@
 }
 ```
 
+- 트랙이 다른 경우
+
+```json
+{
+  "status": 409,
+  "success": false,
+  "message": "사용자 프로젝트 트랙과 해당 팀 트랙이 일치하지 않습니다."
+}
+```
+
 - 서버 오류
 
 ```json
@@ -150,7 +160,7 @@
 
 ```json
 {
-  "teamId": 1,
+  "project": '특화 프로젝트',
   "userId": 2,
   "message": "지원 메시지 글"
 }
@@ -184,6 +194,26 @@
   "status": 409,
   "success": false,
   "message": "해당 교육생은 이미 다른 팀에 합류되어 있습니다."
+}
+```
+
+- 팀이 없을 때
+
+```json
+{
+  "status": 409,
+  "success": false,
+  "message": "팀 생성 후 다시 요청을 시도해주세요."
+}
+```
+
+- 트랙이 다른 경우
+
+```json
+{
+  "status": 409,
+  "success": false,
+  "message": "해당 교육생의 프로젝트 트랙이 팀의 프로젝트 트랙과 일치하지 않습니다."
 }
 ```
 
