Modify : 팀 상세 정보 조회 API 수정

--- a/api/팀 관련.md
+++ b/api/팀 관련.md
@@ -140,15 +140,18 @@
     "techStacks": [
       {
         "id": 1,
-        "techStackName": "JavaScript"
+        "techStackName": "JavaScript",
+        "techStackImgUrl": "이미지 url"
       },
       {
         "id": 2,
-        "techStackName": "JPA"
+        "techStackName": "JPA",
+        "techStackImgUrl": "이미지 url"
       },
       {
         "id": 3,
-        "techStackName": "Spring Boot"
+        "techStackName": "Spring Boot",
+        "techStackImgUrl": "이미지 url"
       }
     ],
     "members": [
