Modify : 요청 응답 변수 수정

--- a/api/채팅.md
+++ b/api/채팅.md
@@ -73,6 +73,7 @@
   "senderId" : 1,
   "content" : "안녕하세요",
   "sentTime": "2022-01-17T17:03:36.336763"
+  "userName": "조원빈"
 }
 ```
 
@@ -83,6 +84,7 @@
   "senderId": 1,
   "sentTime": "2022-01-17T17:03:37.336763",
   "content": "안녕하세요."
+  "userName": "조원빈"
 }
 ```
 
@@ -114,35 +116,30 @@
 {
   "contentList": [
     {
-      "id": 14,
       "content": "추가 데이터11",
       "userName": "손영배",
       "sentTime": "2022-01-17T17:03:48.336763",
       "senderId": 1
     },
     {
-      "id": 13,
       "content": "추가 데이터11",
       "userName": "조원빈",
       "sentTime": "2022-01-17T17:03:47.336763",
       "senderId": 2
     },
     {
-      "id": 12,
       "content": "추가 데이터11",
       "userName": "손영배",
       "sentTime": "2022-01-17T17:03:46.336763",
       "senderId": 1
     },
     {
-      "id": 11,
       "content": "추가 데이터11",
       "userName": "조원빈",
       "sentTime": "2022-01-17T17:03:45.336763",
       "senderId": 2
     },
     {
-      "id": 10,
       "content": "추가 데이터10",
       "userName": "손영배",
       "sentTime": "2022-01-17T17:03:44.336763",
@@ -153,7 +150,7 @@
 }
 ```
 
-> id가 큰 것이 최신
+> 맨 위의 데이터가 최신
 > nowPage : 1 을 요청했을 때만 totalPages를 넘겨줌.
 
 - 페이징 요청한 경우 대화 내용 불러오기 성공(페이징 처리)
@@ -162,35 +159,30 @@
 {
   "contentList": [
     {
-      "id": 9,
       "content": "추가 데이터9",
       "userName": "조원빈",
       "sentTime": "2022-01-17T17:03:43.336763",
       "senderId": 2
     },
     {
-      "id": 8,
       "content": "추가 데이터8",
       "userName": "손영배",
       "sentTime": "2022-01-17T17:03:42.336763",
       "senderId": 1
     },
     {
-      "id": 7,
       "content": "추가 데이터7",
       "userName": "조원빈",
       "sentTime": "2022-01-17T17:03:41.336763",
       "senderId": 2
     },
     {
-      "id": 6,
       "content": "추가 데이터6",
       "userName": "조원빈",
       "sentTime": "2022-01-17T17:03:40.336763",
       "senderId": 2
     },
     {
-      "id": 5,
       "content": "추가 데이터5",
       "userName": "조원빈",
       "sentTime": "2022-01-17T17:03:39.336763",
