Docs : 나의 정보 가져오기 API 추가

--- a/api/교육생 관련.md
+++ b/api/교육생 관련.md
@@ -1,5 +1,75 @@
 # 교육생 관련
 
+## READ | 나의 정보 받기
+
+| TYPE |        URL             | TOKEN |
+| :--: | :--------------------: | :---: |
+| GET  | /api/auth/user/my-info |   O   |
+
+### Request
+
+```json
+{}
+```
+
+### Response
+
+- 나의 정보 가져오기 성공
+
+```json
+{
+  "userId": 1,
+  "userName": "박정환",
+  "userEmail": "jeonghwan.dev@gmail.com",
+  "studentNumber": "0645387",
+  "campus": "서울",
+  "ssafyTrack": "Java Track",
+  "message": "success",
+  "projects": [
+    {
+      "projectId": 1,
+      "projectName": "공통 프로젝트",
+      "projectTrack": "웹 기술",
+      "projectTeamId": 10
+    },
+    {
+      "projectId": 2,
+      "projectName": "특화 프로젝트",
+      "projectTrack": null,
+      "projectTeamId": null
+    },
+    {
+      "projectId": 3,
+      "projectName": "자율 프로젝트",
+      "projectTrack": null,
+      "projectTeamId": null
+    }
+  ]
+}
+```
+
+- 나의 정보 가져오기 실패 (Token 일치하지 않을 때)
+
+```json
+{
+  "status": 403,
+  "success": false,
+  "message": "잘못된 접근입니다."
+}
+```
+
+- 나의 정보 가져오기 실패 (서버 오류)
+
+```json
+{
+  "status": 500,
+  "success": false,
+  "message": "Internal Server Error, 응답 실패"
+}
+```
+
+<br />
+
 ## READ | 교육생 상세 정보 받기
 
 | TYPE |             URL             | TOKEN |
