Modify : 대화 내용 불러오기 API 수정

--- a/api/채팅.md
+++ b/api/채팅.md
@@ -116,30 +116,35 @@
 {
   "contentList": [
     {
+      "roomId": "1-2"
       "content": "추가 데이터11",
       "userName": "손영배",
       "sentTime": "2022-01-17T17:03:48.336763",
       "senderId": 1
     },
     {
+      "roomId": "1-2"
       "content": "추가 데이터11",
       "userName": "조원빈",
       "sentTime": "2022-01-17T17:03:47.336763",
       "senderId": 2
     },
     {
+      "roomId": "1-2"
       "content": "추가 데이터11",
       "userName": "손영배",
       "sentTime": "2022-01-17T17:03:46.336763",
       "senderId": 1
     },
     {
+      "roomId": "1-2"
       "content": "추가 데이터11",
       "userName": "조원빈",
       "sentTime": "2022-01-17T17:03:45.336763",
       "senderId": 2
     },
     {
+      "roomId": "1-2"
       "content": "추가 데이터10",
       "userName": "손영배",
       "sentTime": "2022-01-17T17:03:44.336763",
@@ -159,30 +164,35 @@
 {
   "contentList": [
     {
+      "roomId": "1-2"
       "content": "추가 데이터9",
       "userName": "조원빈",
       "sentTime": "2022-01-17T17:03:43.336763",
       "senderId": 2
     },
     {
+      "roomId": "1-2"
       "content": "추가 데이터8",
       "userName": "손영배",
       "sentTime": "2022-01-17T17:03:42.336763",
       "senderId": 1
     },
     {
+      "roomId": "1-2"
       "content": "추가 데이터7",
       "userName": "조원빈",
       "sentTime": "2022-01-17T17:03:41.336763",
       "senderId": 2
     },
     {
+      "roomId": "1-2"
       "content": "추가 데이터6",
       "userName": "조원빈",
       "sentTime": "2022-01-17T17:03:40.336763",
       "senderId": 2
     },
     {
+      "roomId": "1-2"
       "content": "추가 데이터5",
       "userName": "조원빈",
       "sentTime": "2022-01-17T17:03:39.336763",
