Modify : 팀 생성 및 수정 API 수정

--- a/api/팀 관련.md
+++ b/api/팀 관련.md
@@ -62,17 +62,7 @@
   "teamName": "싸피메이트",
   "notice": "최우수상에 도전할 팀원을 모집합니다.",
   "introduction": "환상의 호흡으로 프로젝트 진행해 보고 싶습니다. 백엔드는 ... 프론트는 ... 이런 식으로 개발 진행하려고 합니다.",
-  "techStacks": [
-    {
-      "techStacksName": "JavaScript"
-    },
-    {
-      "techStacksName": "JPA"
-    },
-    {
-      "techStacksName": "Spring Boot"
-    }
-  ],
+  "techStacks": [1, 5, 8, 20, 42],
   "totalRecruitment": 6,
   "frontendRecruitment": 3,
   "backendRecruitment": 3
@@ -91,6 +81,7 @@
 
 ```json
 {
+  "teamId": 1,
   "message": "팀을 성공적으로 생성하였습니다."
 }
 ```
@@ -125,16 +116,15 @@
 {
   "teamData": {
     "teamId": 1,
-    "createDateTime": "2022-01-24",
+    "teamName": "싸피메이트",
+    "teamImgUrl": "URL 형식",
     "owner": {
       "userId": 1,
       "userName": "박정환"
     },
-    "teamImgUrl": "URL 형식",
     "campus": "서울",
     "project": "특화 프로젝트",
     "projectTrack": "빅데이터",
-    "teamName": "싸피메이트",
     "notice": "최우수상에 도전할 팀원을 모집합니다.",
     "introduction": "환상의 호흡으로 프로젝트 진행해 보고 싶습니다. 백엔드는 ... 프론트는 ... 이런 식으로 개발 진행하려고 합니다.",
     "techStacks": [
@@ -178,11 +168,12 @@
       }
     ],
     "totalRecruitment": 6,
-    "frontendRecruitment": 3,
-    "backendRecruitment": 3,
     "totalHeadcount": 5,
+    "frontendRecruitment": 3,
     "frontendHeadcount": 3,
-    "backendHeadcount": 2
+    "backendRecruitment": 3,
+    "backendHeadcount": 2,
+    "createDateTime": "2022-01-24"
   }
 }
 ```
@@ -236,17 +227,7 @@
   "teamName": "싸피메이트",
   "notice": "최우수상에 도전할 팀원을 모집합니다.",
   "introduction": "환상의 호흡으로 프로젝트 진행해 보고 싶습니다. 백엔드는 ... 프론트는 ... 이런 식으로 개발 진행하려고 합니다.",
-  "techStacks": [
-    {
-      "techStackName": "JavaScript"
-    },
-    {
-      "techStackName": "JPA"
-    },
-    {
-      "techStackName": "Spring Boot"
-    }
-  ],
+  "techStacks": [1, 5, 8, 20, 42],
   "totalRecruitment": 6,
   "frontendRecruitment": 3,
   "backendRecruitment": 3
@@ -265,6 +246,7 @@
 
 ```json
 {
+  "teamId": 1,
   "message": "팀 상세 정보 수정이 완료되었습니다."
 }
 ```
