Modify : 교육생 정보 수정  API 수정

--- a/api/교육생 관련.md
+++ b/api/교육생 관련.md
@@ -187,40 +187,90 @@
 
 | TYPE |          URL           | TOKEN |
 | :--: | :--------------------: | :---: |
-| PUT  | /api/auth/user/:userId |   O   |
+| PUT  | /api/auth/user/info/:userId/:profileInfo |   O   |
 
+profileInfo : ssafy-track, profileImg, self-introduction, jobs, tech-stacks, urls, project-stacks
 ### Request
 
 ```json
 {
-  "profileImg": "프로필 사진",
-  "selfIntroduction": "안녕하세요...",
-  "job1": "프론트엔드 (Front-end)",
-  "job2": "백엔드 (Back-end)",
-  "techStacks": [
-    {
-      "techStackCode": 2,
-      "techStackLevel": "상"
-    },
-    {
-      "techStackNCode": 3,
-      "techStackLevel": "중"
-    }
-    {
-      "techStackCode": 4,
-      "techStackLevel": "중"
-    }
-  ],
-  "githubUrl": "https://github.com/ssafy-mate",
-  "etcUrl": "https://velog.io/@ssafy-mate",
+  "ssafyTrack" : "Java Track"
 }
 ```
 
-> formData 형식으로 전송
+```json
+{
+  "profileImg": "프로필 사진"
+}
+```
+
+```json
+{
+ "selfIntroduction": "수정했어요..."
+}
+```
+
+```json
+{
+  "job1": "프론트엔드 (Front-end)",
+  "job2": "백엔드 (Back-end)"
+}
+```
+
+```json
+{
+   "techStacks": [
+        {
+          "techStackCode": 1,
+          "techStackLevel": "상"
+        },
+        {
+          "techStackCode": 2,
+          "techStackLevel": "중"
+        },
+        {
+          "techStackCode": 3,
+          "techStackLevel": "중"
+        },
+        {
+          "techStackCode": 4,
+          "techStackLevel": "중"
+        },
+        {
+          "techStackCode": 5,
+          "techStackLevel": "중"
+        }
+      ]
+}
+```
+
+```json
+{
+  "githubUrl": "https://github.com/ssafy-mate",
+  "etcUrl": "https://velog.io/@ssafy-mate"
+}
+```
+
+```json
+{
+  "projects": [
+    {
+      "projectId": 1,
+      "projectTrack": "웹 기술"
+    },
+    {
+      "projectId": 2,
+      "projectTrack": "인공지능"
+    }
+  ]
+}
+```
+
+> profileImg : formData 형식으로 전송
 >
 > 최소 요건 : techStacks 2가지 이상
 >
-> 특이 사항 : techStacks → Json Stringify로 처리
+
 
 ### Response
 
@@ -228,7 +278,7 @@
 
 ```
 {
-  "message": "교육생 상세 정보 수정이 완료되었습니다."
+  "message": "교육 트랙/프로필 이미지/자기 소개/희망 직무/기술 스택/SNS 링크/프로젝트 트랙 수정이 완료되었습니다."
 }
 ```
 
@@ -236,7 +286,7 @@
 
 ```
 {
-  "status": 400,
+  "status": 403,
   "success": false,
   "message": "사용자는 정보를 수정할 수 있는 권한이 없습니다."
 }
@@ -249,6 +299,16 @@
   "status": 500,
   "success": false,
   "message": "Internal Server, 교육생 상세 정보 수정 실패"
+}
+```
+
+- 프로젝트 트랙 수정 실패 시
+
+```
+{
+  "status": 409,
+  "success": false,
+  "message": "현재 소속팀이 있기에 수정이 불가능합니다."
 }
 ```
 
