Modify : 회원 정보 수정 API

--- a/api/교육생 관련.md
+++ b/api/교육생 관련.md
@@ -189,7 +189,8 @@
 | :--: | :--------------------: | :---: |
 | PUT  | /api/auth/user/info/:userId/:profileInfo |   O   |
 
-profileInfo : ssafy-track, profileImg, self-introduction, jobs, tech-stacks, urls, project-stacks
+**profileInfo** : ssafy-track, profileImg, self-introduction, jobs, tech-stacks, urls, project-stacks
+
 ### Request
 
 ```json
@@ -206,7 +207,7 @@ profileInfo : ssafy-track, profileImg, self-introduction, jobs, tech-stacks, url
 
 ```json
 {
- "selfIntroduction": "수정했어요..."
+  "selfIntroduction": "수정했어요..."
 }
 ```
 
@@ -219,28 +220,28 @@ profileInfo : ssafy-track, profileImg, self-introduction, jobs, tech-stacks, url
 
 ```json
 {
-   "techStacks": [
-        {
-          "techStackCode": 1,
-          "techStackLevel": "상"
-        },
-        {
-          "techStackCode": 2,
-          "techStackLevel": "중"
-        },
-        {
-          "techStackCode": 3,
-          "techStackLevel": "중"
-        },
-        {
-          "techStackCode": 4,
-          "techStackLevel": "중"
-        },
-        {
-          "techStackCode": 5,
-          "techStackLevel": "중"
-        }
-      ]
+  "techStacks": [
+    {
+      "techStackCode": 1,
+      "techStackLevel": "상"
+    },
+    {
+      "techStackCode": 2,
+      "techStackLevel": "중"
+    },
+    {
+      "techStackCode": 3,
+      "techStackLevel": "중"
+    },
+    {
+      "techStackCode": 4,
+      "techStackLevel": "중"
+    },
+    {
+      "techStackCode": 5,
+      "techStackLevel": "중"
+    }
+  ]
 }
 ```
 
@@ -292,16 +293,6 @@ profileInfo : ssafy-track, profileImg, self-introduction, jobs, tech-stacks, url
 }
 ```
 
-- 교육생 상세 정보 수정 실패 시
-
-```
-{
-  "status": 500,
-  "success": false,
-  "message": "Internal Server, 교육생 상세 정보 수정 실패"
-}
-```
-
 - 프로젝트 트랙 수정 실패 시
 
 ```
@@ -309,6 +300,16 @@ profileInfo : ssafy-track, profileImg, self-introduction, jobs, tech-stacks, url
   "status": 409,
   "success": false,
   "message": "현재 소속팀이 있기에 수정이 불가능합니다."
+}
+```
+
+- 교육생 상세 정보 수정 실패 시
+
+```
+{
+  "status": 500,
+  "success": false,
+  "message": "Internal Server, 교육생 상세 정보 수정 실패"
 }
 ```
 
