Add : 팀 권환 확인 API 추가

--- a/api/팀 관련.md
+++ b/api/팀 관련.md
@@ -212,9 +212,9 @@
 
 ## UPDATE | 팀 상세 정보 수정 요청
 
-| TYPE |          URL           | TOKEN |
-| :--: | :--------------------: | :---: |
-| PUT  | /api/auth/team/:teamId |   O   |
+| TYPE |             URL             | TOKEN |
+| :--: | :-------------------------: | :---: |
+| PUT  | /api/auth/team/info/:teamId |   O   |
 
 ### Request
 
@@ -275,9 +275,9 @@
 
 ## DELETE | 팀 삭제
 
-|  TYPE  |          URL           | TOKEN |
-| :----: | :--------------------: | :---: |
-| DELETE | /api/auth/team/:teamId |   O   |
+|  TYPE  |             URL             | TOKEN |
+| :----: | :-------------------------: | :---: |
+| DELETE | /api/auth/team/info/:teamId |   O   |
 
 ### Request
 
@@ -395,5 +395,61 @@
   "status": 500,
   "success": false,
   "meesage": "Internal Server, 팀 리스트 조회 실패"
+}
+```
+
+<br />
+
+### READ | 팀 권환 확인
+
+| TYPE |         URL         | TOKEN |
+| :--: | :-----------------: | :---: |
+| GET  | /api/auth/team/role |   O   |
+
+### Request
+
+```json
+{}
+```
+
+### Response
+
+- 역할 반환
+
+```json
+{
+  "role": "owner"
+}
+```
+
+```json
+{
+  "role": "member"
+}
+```
+
+```json
+{
+  "role": "outsider"
+}
+```
+
+- 유효하지 않는 토큰
+
+```json
+{
+  "status": 403,
+  "success": false,
+  "message": "토큰이 유효하지 않습니다."
+}
+```
+
+- 서버 처리 실패
+
+```json
+{
+  "status": 500,
+  "success": false,
+  "meesage": "Internal Server, 팀 권한 조회 실패"
 }
 ```
