Add : 속한 팀 아이디 반환 API 구현

--- a/api/팀 관련.md
+++ b/api/팀 관련.md
@@ -453,3 +453,47 @@
   "meesage": "Internal Server, 팀 권한 조회 실패"
 }
 ```
+
+<br />
+
+### READ | 속한 팀 아이디 반환
+
+| TYPE |          URL           | TOKEN |
+| :--: | :--------------------: | :---: |
+| GET  | /api/auth/user/team-id |   O   |
+
+### Request
+
+```json
+{}
+```
+
+### Response
+
+- 속한 팀 아이디 반환
+
+```json
+{
+  "teamId": 1
+}
+```
+
+- 유효하지 않는 토큰
+
+```json
+{
+  "status": 403,
+  "success": false,
+  "message": "토큰이 유효하지 않습니다."
+}
+```
+
+- 서버 처리 실패
+
+```json
+{
+  "status": 500,
+  "success": false,
+  "meesage": "Internal Server, 내 팀 아이디 조회 실패"
+}
+```
