Modify : 팀 상세 정보 조회 API 수정

--- a/api/팀 관련.md
+++ b/api/팀 관련.md
@@ -174,8 +174,9 @@
     "backendRecruitment": 3,
     "backendHeadcount": 2,
     "createDateTime": "2022-01-24"
-  }
-}
+  },
+  "role": "owner | member | outsider",
+ }
 ```
 
 - 팀 상세 정보 받아오기 실패 시 (유효하지 않는 토큰)
