Add : 교육생 팀 아이디 조회 API 설계

--- a/api/교육생 관련.md
+++ b/api/교육생 관련.md
@@ -2,7 +2,7 @@
 
 ## READ | 나의 정보 받기
 
-| TYPE |        URL             | TOKEN |
+| TYPE |          URL           | TOKEN |
 | :--: | :--------------------: | :---: |
 | GET  | /api/auth/user/my-info |   O   |
 
@@ -185,8 +185,8 @@
 
 ## UPDATE | 교육생 상세 정보 수정 요청
 
-| TYPE |          URL           | TOKEN |
-| :--: | :--------------------: | :---: |
+| TYPE |                   URL                    | TOKEN |
+| :--: | :--------------------------------------: | :---: |
 | PUT  | /api/auth/user/info/:userId/:profileInfo |   O   |
 
 **profileInfo** : ssafy-track, profileImg, self-introduction, jobs, tech-stacks, urls, project-stacks
@@ -195,7 +195,7 @@
 
 ```json
 {
-  "ssafyTrack" : "Java Track"
+  "ssafyTrack": "Java Track"
 }
 ```
 
@@ -270,8 +270,6 @@
 > profileImg : formData 형식으로 전송
 >
 > 최소 요건 : techStacks 2가지 이상
->
-
 
 ### Response
 
@@ -451,5 +449,55 @@
   "status": 500,
   "success": false,
   "message": "Internal Server Error, 프로젝트 정보 갱신 실패"
+}
+```
+
+## READ | 교육생 팀 아이디 조회
+
+| TYPE |          URL           | TOKEN |
+| :--: | :--------------------: | :---: |
+| GET  | /api/auth/user/team-id |   O   |
+
+### Request
+
+```json
+{
+  "project": "특화 프로젝트"
+}
+```
+
+### Response
+
+- 정상 조회
+
+```json
+{
+  "teamId": 2
+}
+```
+
+```json
+{
+  "teamId": null
+}
+```
+
+- 유효하지 않는 토큰
+
+```json
+{
+  "status": 403,
+  "success": false,
+  "message": "토큰이 유효하지 않습니다."
+}
+```
+
+- 서버 처리 실패
+
+```json
+{
+  "status": 500,
+  "success": false,
+  "meesage": "Internal Server, 내 팀 아이디 조회 실패"
 }
 ```
