Modify : 팀 생성 API 수정

--- a/api/팀 관련.md
+++ b/api/팀 관련.md
@@ -49,7 +49,7 @@
 
 | TYPE |      URL       | TOKEN |
 | :--: | :------------: | :---: |
-| POST | /api/auth/team |   O   |
+| POST | /api/auth/team/info |   O   |
 
 ### Request
 
