Modify : 프로젝트 수정 API 추가

--- a/api/프로젝트 관련.md
+++ b/api/프로젝트 관련.md
@@ -72,6 +72,78 @@
 
 <br />
 
+## 프로젝트 트랙 수정
+
+| TYPE |             URL              | TOKEN |
+| :--: | :--------------------------: | :---: |
+| PUT | /api/auth/user/project/track |   O   |
+
+### Request
+
+```json
+{
+  "project": "특화 프로젝트",
+  "projectTrack": "빅데이터"
+}
+```
+
+```json
+{
+  "project": "공통 프로젝트",
+  "projectTrack": "웹 기술"
+}
+```
+
+### Response
+
+- 트랙 수정 성공
+
+```json
+{
+  "success": true,
+  "message": "특화 프로젝트 트랙 수정이 완료되었습니다."
+}
+```
+
+```json
+{
+  "success": true,
+  "message": "공통 프로젝트 트랙 수정이 완료되었습니다."
+}
+```
+
+- 유효하지 않는 토큰
+
+```json
+{
+  "status": 403,
+  "success": false,
+  "message": "토큰이 유효하지 않습니다."
+}
+```
+
+- 이미 트랙을 선택한 사용자일 때
+
+```json
+{
+  "status": 409,
+  "success": false,
+  "message": "현재 소속팀이 있기에 수정이 불가능합니다."
+}
+```
+
+- 서버 오류
+
+```json
+{
+  "status": 500,
+  "success": false,
+  "message": "Internal Server Error, 프로젝트 트랙 수정 실패"
+}
+```
+
+<br/>
+
 ## 팀 지원 요청 (사용자 -> 팀)
 
 | TYPE |          URL           | TOKEN |
