Modify : 교육생 정보 수정 API

--- a/api/교육생 관련.md
+++ b/api/교육생 관련.md
@@ -183,13 +183,15 @@
 }
 ```
 
+<br />
+
 ## UPDATE | 교육생 상세 정보 수정 요청
 
 | TYPE |                   URL                    | TOKEN |
 | :--: | :--------------------------------------: | :---: |
 | PUT  | /api/auth/user/info/:userId/:profileInfo |   O   |
 
-**profileInfo** : ssafy-track, profileImg, self-introduction, jobs, tech-stacks, urls, project-stacks
+**profileInfo** : ssafy-track, profileImg, self-introduction, jobs, tech-stacks, urls
 
 ### Request
 
@@ -252,22 +254,7 @@
 }
 ```
 
-```json
-{
-  "projects": [
-    {
-      "projectId": 1,
-      "projectTrack": "웹 기술"
-    },
-    {
-      "projectId": 2,
-      "projectTrack": "인공지능"
-    }
-  ]
-}
-```
-
-> profileImg : formData 형식으로 전송
+> formData 형식으로 전송
 >
 > 최소 요건 : techStacks 2가지 이상
 
@@ -277,7 +264,7 @@
 
 ```
 {
-  "message": "교육 트랙/프로필 이미지/자기 소개/희망 직무/기술 스택/SNS 링크/프로젝트 트랙 수정이 완료되었습니다."
+  "message": "교육 트랙/프로필 이미지/자기 소개/희망 직무/기술 스택/SNS 링크 수정이 완료되었습니다."
 }
 ```
 
@@ -291,16 +278,6 @@
 }
 ```
 
-- 프로젝트 트랙 수정 실패 시
-
-```
-{
-  "status": 409,
-  "success": false,
-  "message": "현재 소속팀이 있기에 수정이 불가능합니다."
-}
-```
-
 - 교육생 상세 정보 수정 실패 시
 
 ```
@@ -310,6 +287,8 @@
   "message": "Internal Server, 교육생 상세 정보 수정 실패"
 }
 ```
+
+<br />
 
 ## READ | 교육생 리스트 요청
 
@@ -451,6 +430,8 @@
   "message": "Internal Server Error, 프로젝트 정보 갱신 실패"
 }
 ```
+
+<br />
 
 ## READ | 교육생 팀 아이디 조회
 
