Add : 팀 탈퇴처리 API 설계

--- a/api/팀 관련.md
+++ b/api/팀 관련.md
@@ -47,8 +47,8 @@
 
 ## CREATE | 팀 생성 요청
 
-| TYPE |      URL       | TOKEN |
-| :--: | :------------: | :---: |
+| TYPE |         URL         | TOKEN |
+| :--: | :-----------------: | :---: |
 | POST | /api/auth/team/info |   O   |
 
 ### Request
@@ -175,15 +175,15 @@
     "backendHeadcount": 2,
     "createDateTime": "2022-01-24"
   },
-  "role": "owner | member | outsider",
- }
+  "role": "owner | member | outsider"
+}
 ```
 
 - 팀 상세 정보 받아오기 실패 시 (유효하지 않는 토큰)
 
 ```json
 {
-  "status": 401,
+  "status": 403,
   "success": false,
   "message": "토큰이 유효하지 않습니다."
 }
@@ -399,3 +399,53 @@
 }
 ```
 
+## DELETE | 팀 탈퇴
+
+|  TYPE  |             URL              | TOKEN |
+| :----: | :--------------------------: | :---: |
+| DELETE | /api/auth/team/leave/:teamId |   O   |
+
+## Request
+
+```json
+{}
+```
+
+## Response
+
+```json
+{
+  "success": true,
+  "message": "탈퇴 처리가 완료되었습니다."
+}
+```
+
+- 가입된 팀이 아닐 때
+
+```json
+{
+  "status": 409,
+  "success": true,
+  "message": "합류된 팀이 아닙니다."
+}
+```
+
+- 토큰이 유효하지 않을 때
+
+```json
+{
+  "status": 403,
+  "success": true,
+  "message": "토큰이 유효하지 않습니다."
+}
+```
+
+- 서버 처리 실패
+
+```json
+{
+  "status": 500,
+  "success": false,
+  "meesage": "Internal Server, 팀 탈퇴 처리 실패"
+}
+```
