Modify :  채팅방 불러오기 변수 추가

--- a/api/채팅.md
+++ b/api/채팅.md
@@ -20,10 +20,11 @@
     {
       "roomId": "1-2",
       "userId": 1,
-      "userName": "조원빈",
+      "userName": "손영배",
       "profileImgUrl": "/src/main/~~~",
       "content": "안녕하세요",
       "sentTime": "2022-01-17T17:03:36.336763"
+      "userEmail": "dudqo225@naver.com"
     },
     {
       "roomId": "1-2",
@@ -32,6 +33,7 @@
       "profileImgUrl": "/src/main/~~~",
       "content": "안녕하세요",
       "sentTime": "2022-01-17T17:03:26.336763"
+      "userEmail": "jwb7214@naver.com"
     }
   ]
 }
