Modify : 교육생 관련 API URL 개편

--- a/api/교육생 관련.md
+++ b/api/교육생 관련.md
@@ -2,9 +2,9 @@
 
 ## READ | 나의 정보 받기
 
-| TYPE |          URL           | TOKEN |
-| :--: | :--------------------: | :---: |
-| GET  | /api/auth/user/my-info |   O   |
+| TYPE |               URL               | TOKEN |
+| :--: | :-----------------------------: | :---: |
+| GET  | /api/auth/users/:userId/my-info |   O   |
 
 ### Request
 
@@ -24,7 +24,6 @@
   "studentNumber": "0645387",
   "campus": "서울",
   "ssafyTrack": "Java Track",
-  "message": "success",
   "projects": [
     {
       "projectId": 1,
@@ -72,9 +71,9 @@
 
 ## READ | 교육생 상세 정보 받기
 
-| TYPE |             URL             | TOKEN |
-| :--: | :-------------------------: | :---: |
-| GET  | /api/auth/user/info/:userId |   O   |
+| TYPE |           URL           | TOKEN |
+| :--: | :---------------------: | :---: |
+| GET  | /api/auth/users/:userId |   O   |
 
 ### Request
 
@@ -187,9 +186,9 @@
 
 ## UPDATE | 교육생 상세 정보 수정 요청
 
-| TYPE |                   URL                    | TOKEN |
-| :--: | :--------------------------------------: | :---: |
-| PUT  | /api/auth/user/info/:userId/:profileInfo |   O   |
+| TYPE |                 URL                  | TOKEN |
+| :--: | :----------------------------------: | :---: |
+| PUT  | /api/auth/users/:userId/:profileInfo |   O   |
 
 **profileInfo** : ssafy-track, profileImg, self-introduction, jobs, tech-stacks, urls
 
@@ -292,9 +291,9 @@
 
 ## READ | 교육생 리스트 요청
 
-| TYPE |             URL             | TOKEN |
-| :--: | :-------------------------: | :---: |
-| get  | /api/auth/project/user-list |   O   |
+| TYPE |       URL       | TOKEN |
+| :--: | :-------------: | :---: |
+| get  | /api/auth/users |   O   |
 
 ### Request
 
@@ -308,7 +307,7 @@
   "user_name": "박정환",
   "job1": "프론트엔드(Front-end)",
   "sort": "최신순",
-  "exclusion" : false
+  "exclusion": false,
   "page": 1
 }
 ```
@@ -385,9 +384,9 @@
 
 ## READ | 교육생 프로젝트 정보 받기
 
-| TYPE |           URL           | TOKEN |
-| :--: | :---------------------: | :---: |
-| GET  | /api/auth/user/projects |   O   |
+| TYPE |               URL                | TOKEN |
+| :--: | :------------------------------: | :---: |
+| GET  | /api/auth/users/:userId/projects |   O   |
 
 ### Request
 
@@ -435,9 +434,9 @@
 
 ## READ | 교육생 팀 아이디 조회
 
-| TYPE |          URL           | TOKEN |
-| :--: | :--------------------: | :---: |
-| GET  | /api/auth/user/team-id |   O   |
+| TYPE |               URL               | TOKEN |
+| :--: | :-----------------------------: | :---: |
+| GET  | /api/auth/users/:userId/team-id |   O   |
 
 ### Request
 
