--- a/api/기술 스택.md
+++ b/api/기술 스택.md
@@ -2,9 +2,9 @@
 
 ## 기술 스택 리스트 받기
 
-| TYPE |         URL         | TOKEN |
-| :--: | :-----------------: | :---: |
-| GET  | /api/techstack-list |   X   |
+| TYPE |       URL       | TOKEN |
+| :--: | :-------------: | :---: |
+| GET  | /api/techstacks |   X   |
 
 ## Request
 
