Modify : 로그인 API URL 수정

--- a/api/로그인 페이지.md
+++ b/api/로그인 페이지.md
@@ -2,9 +2,9 @@
 
 ## 로그인
 
-| TYPE |        URL        | TOKEN |
-| :--: | :---------------: | :---: |
-| POST | /api/user/sign-in |   X   |
+| TYPE |        URL         | TOKEN |
+| :--: | :----------------: | :---: |
+| POST | /api/users/sign-in |   X   |
 
 ### Request
 
@@ -76,9 +76,9 @@
 
 ## 아이디 찾기
 
-| TYPE |         URL         | TOKEN |
-| :--: | :-----------------: | :---: |
-| GET  | /api/user/id-search |   X   |
+| TYPE |           URL           | TOKEN |
+| :--: | :---------------------: | :---: |
+| GET  | /api/users/id/searching |   X   |
 
 ### Request
 
@@ -127,9 +127,9 @@
 
 ## 비밀번호 재설정 (인증 요청 & 재요청)
 
-| TYPE |         URL         | TOKEN |
-| :--: | :-----------------: | :---: |
-| GET  | /api/user/pw-search |   X   |
+| TYPE |           URL           | TOKEN |
+| :--: | :---------------------: | :---: |
+| GET  | /api/users/password/new |   X   |
 
 ### Request
 
