Modify : 프로젝트 관련 API URL 수정

--- a/api/프로젝트 관련.md
+++ b/api/프로젝트 관련.md
@@ -2,9 +2,9 @@
 
 ## 프로젝트 트랙 선택
 
-| TYPE |             URL              | TOKEN |
-| :--: | :--------------------------: | :---: |
-| POST | /api/auth/user/project/track |   O   |
+| TYPE |                  URL                  | TOKEN |
+| :--: | :-----------------------------------: | :---: |
+| POST | /api/auth/users/:userId/project-track |   O   |
 
 ### Request
 
@@ -74,9 +74,9 @@
 
 ## 프로젝트 트랙 수정
 
-| TYPE |             URL              | TOKEN |
-| :--: | :--------------------------: | :---: |
-| PUT | /api/auth/user/project/track |   O   |
+| TYPE |                  URL                  | TOKEN |
+| :--: | :-----------------------------------: | :---: |
+| PUT  | /api/auth/users/:userId/project-track |   O   |
 
 ### Request
 
@@ -146,9 +146,9 @@
 
 ## 팀 지원 요청 (사용자 -> 팀)
 
-| TYPE |          URL           | TOKEN |
-| :--: | :--------------------: | :---: |
-| POST | /api/auth/user/request |   O   |
+| TYPE |           URL           | TOKEN |
+| :--: | :---------------------: | :---: |
+| POST | /api/auth/requests/user |   O   |
 
 ### Request
 
@@ -224,9 +224,9 @@
 
 ## 팀 합류 요청 (팀 (팀장) -> 사용자)
 
-| TYPE |          URL           | TOKEN |
-| :--: | :--------------------: | :---: |
-| POST | /api/auth/team/request |   O   |
+| TYPE |           URL           | TOKEN |
+| :--: | :---------------------: | :---: |
+| POST | /api/auth/requests/team |   O   |
 
 ### Request
 
