Modify : 회원가입 API URL 수정

--- a/api/회원가입 페이지.md
+++ b/api/회원가입 페이지.md
@@ -2,9 +2,9 @@
 
 ## 교육생 인증 (1단계 : 교육생 인증)
 
-| TYPE |                 URL                  | TOKEN |
-| :--: | :----------------------------------: | :---: |
-| GET  | /api/user/sign-up/verification/ssafy |   X   |
+| TYPE |                  URL                  | TOKEN |
+| :--: | :-----------------------------------: | :---: |
+| GET  | /api/users/sign-up/verification/ssafy |   X   |
 
 > DB 저장 x
 
@@ -66,9 +66,9 @@
 
 ## 이메일 인증 요청 & 재요청 (2단계 : 기본 정보 작성)
 
-| TYPE |                 URL                  | TOKEN |
-| :--: | :----------------------------------: | :---: |
-| GET | /api/user/sign-up/verification/email |   X   |
+| TYPE |                  URL                   | TOKEN |
+| :--: | :------------------------------------: | :---: |
+| GET  | /api/users/sign-up/verification/emails |   X   |
 
 ### Request
 
@@ -115,9 +115,9 @@
 
 ## 인증코드 확인 (2단계 : 기본 정보 작성)
 
-| TYPE |                 URL                  | TOKEN |
-| :--: | :----------------------------------: | :---: |
-| PUT  | /api/user/sign-up/verification/email |   X   |
+| TYPE |                  URL                   | TOKEN |
+| :--: | :------------------------------------: | :---: |
+| PUT  | /api/users/sign-up/verification/emails |   X   |
 
 ### Request
 
@@ -172,9 +172,9 @@
 
 ### CREATE | 계정 생성 (3단계 : 프로필 작성)
 
-| TYPE |    URL    | TOKEN |
-| :--: | :-------: | :---: |
-| POST | /api/user |   X   |
+| TYPE |    URL     | TOKEN |
+| :--: | :--------: | :---: |
+| POST | /api/users |   X   |
 
 ### Request
 
@@ -226,7 +226,7 @@
 
 > agreement 타입 string
 
-> techStacks JSON.stringfy 처리해서 
+> techStacks JSON.stringfy 처리해서
 
 ### Response
 
