Modify : 채팅 URL 수정

--- a/api/채팅.md
+++ b/api/채팅.md
@@ -4,7 +4,7 @@
 
 | TYPE |           URL           | TOKEN |
 | :--: | :---------------------: | :---: |
-| GET  | /api/chat/room/{userId} |   O   |
+| GET  | /api/chats/rooms/{userId} |   O   |
 
 ### Request
 
@@ -63,7 +63,7 @@
 
 | TYPE |      URL      | TOKEN |
 | :--: | :-----------: | :---: |
-| POST | /api/chat |   X   |
+| POST | /api/chats |   X   |
 
 - 프론트엔드 : 채팅용 서버 주소에 대한 axios instance 생성
 - 백엔드 : 기존 서버와 분리된 채팅용 포트 생성 
@@ -94,7 +94,7 @@
 
 | TYPE |      URL      | TOKEN |
 | :--: | :-----------: | :---: |
-| GET  | /api/chat/log/{roomId} |   O   |
+| GET  | /api/chats/logs/{roomId} |   O   |
 
 ### Request
 
